# pomdp_coder

./: .gitignore  .pre-commit-config.yaml  Modelfile  Modelfile.deepseek-large  README.md  api_credits.py  get_output.ipynb  init_ollama.sh  main.py  modelfile-llama33  modelfile-qwen25  mypy.ini  pyproject.toml  test_local_ollama.py
multirun/2025-11-12/23-59-44/: multirun.yaml
outputs/process_outputs/: get_output_corners.ipynb  get_output_empty.ipynb  get_output_rocksample.ipynb  get_output_tiger.ipynb
run_experiments/: run_TROI_planning_agent.sh
uncertain_worms/: metrics.py  structs.py  utils.py
uncertain_worms/config/: generate_experiment_configs.py
uncertain_worms/config/pre_generated_functions/: episode_-1_iter_0_step_0_initial_func_exec_0_attempt_0_llm_output.txt  episode_-1_iter_0_step_0_observation_func_exec_0_attempt_0_llm_output.txt  episode_-1_iter_0_step_0_reward_func_exec_0_attempt_0_llm_output.txt  episode_-1_iter_0_step_0_transition_func_exec_0_attempt_0_llm_output.txt
uncertain_worms/environments/: __init__.py
uncertain_worms/environments/minigrid/: __init__.py  api.py  collect_demos.py  minigrid_env.py
uncertain_worms/environments/rocksample/: __init__.py  api.py  rocksample_env.py
uncertain_worms/planners/: FO_DAStar.py  PO_DAStar.py  __init__.py  astar_planner.py  base_planner.py  lao_star.py  mcts_planner.py  pomcp_planner.py
uncertain_worms/policies/: __init__.py  base_policy.py  behavior_cloning.py  direct_llm_fo_agent.py  direct_llm_po_agent.py  extract_code.py  fully_obs_planning_agent.py  partially_obs_planning_agent.py  random_policy.py  tabular_learners.py
(+3267 files in other folders)
